Fix download button's z-index
so that it doesn't go above Tumblr's sticky header

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -34,7 +34,7 @@ a.TID-parent {
     top: 0;
     left: 0;
     cursor: pointer;
-    z-index: 9999999999;
+    z-index: 89;
     white-space: pre;
     text-transform: none !important;
 
